# tgit

./: .tgit.yml  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: build.yml
scripts/: publish.sh
tests/integration/: test_version_integration.py
tests/unit/: test_add.py  test_changelog.py  test_cli.py  test_commit.py  test_commit_coverage.py  test_config.py  test_interactive_settings.py  test_settings.py  test_settings_command.py  test_utils.py  test_version.py
tgit/: add.py  changelog.py  cli.py  commit.py  config.py  constants.py  interactive_settings.py  settings.py  types.py  utils.py  version.py
tgit/prompts/: commit.txt
tgit/utils/: __init__.py
